--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>National Service Scheme - VEC</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/Nss.png">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/Nss.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="./css/main.css">
@@ -19,7 +19,7 @@
     <!-- Loader HTML -->
     <div id="nss-loader" class="loader-container">
         <div class="loader">
-            <img src="./img/Nss.png" alt="NSS Logo">
+            <img src="./assets/img/Nss.png" alt="NSS Logo">
             <div class="shining-effect"></div>
             <div class="college-name">Velammal Engineering College</div>
         </div>
@@ -31,7 +31,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <!-- favicon -->
-        <link rel="shortcut icon" href="images/NSS-logo.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="assets/img/Nss.png" type="image/x-icon" />
 
         <!-- icons -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -76,7 +76,7 @@
     </div>
 <!-- navbar start -->
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(202, 192, 192);">
-    <img class="navbar-brand" src="./img/Nss.png" alt="nss-logo-png" width="55.4rem" height="60.4rem" />
+    <img class="navbar-brand" src="./assets/img/Nss.png" alt="nss-logo-png" width="55.4rem" height="60.4rem" />
     <a id="mmmut-tag" href=index.html>National Service Scheme<br>Velammal Engineering College</a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -96,19 +96,14 @@
                 <a class="nav-link" href="gallery.html"><i class="fa fa-image"></i> Gallery</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="events.html"><i class="fa fa-calendar"></i> Events</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="podcast.html"><i class="fa fa-microphone"></i> Podcast</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="dashboard-button">
-                    <i class="fa fa-dashboard"></i> Dashboard
-                </a>
+                <a class="nav-link" href="dashboard.html"><i class="fa fa-dashboard"></i> Dashboard</a>
             </li>
-
-            <script>
-                document.getElementById('dashboard-button').addEventListener('click', function () {
-                    window.location.href = 'https://nssvec1.vercel.app/';
-                });
-            </script>
         </ul>
     </div>
 </nav>
@@ -176,7 +171,7 @@
         <div class="flex-container">
             <div class="box" id="box1">
                 <div class="about__img">
-                    <img src="./img/Nss.png" alt="About Image" style="
+                    <img src="./assets/img/Nss.png" alt="About Image" style="
             width: 200px;
             height: 200px; margin-bottom: 10px;
              " />
@@ -274,11 +269,10 @@
                         </script>
                     </marquee>
                 </div>
-                <!--NSS Manual Book Download (PDF). Tt should have image cover. It should be below the notification-->
                 <div class="content">
                     <h1 class="header">NSS MANUAL BOOK</h1>
-                    <a href="./pdf/manualNss.pdf" target="_blank">
-                        <img src="./img/Mannual_Cover.jpg" alt="NSS Manual Book" />
+                    <a href="./assets/pdf/manualNss.pdf" target="_blank">
+                        <img src="./assets/img/Mannual_Cover.jpg" alt="NSS Manual Book" />
                     </a>
                 </div>
 
