--- a/team.html
+++ b/team.html
@@ -50,7 +50,7 @@
 
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(202, 192, 192);">
-        <img class="navbar-brand" src="./img/Nss.png" alt="nss-logo-png" width="55.4rem" height="60.4rem" />
+        <img class="navbar-brand" src="./assets/img/Nss.png" alt="nss-logo-png" width="55.4rem" height="60.4rem" />
         <a id="mmmut-tag" href=index.html>National Service Scheme<br>Velammal Engineering College</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
@@ -70,19 +70,14 @@
                     <a class="nav-link" href="gallery.html"><i class="fa fa-image"></i> Gallery</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="events.html"><i class="fa fa-calendar"></i> Events</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="podcast.html"><i class="fa fa-microphone"></i> Podcast</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" id="dashboard-button">
-                        <i class="fa fa-dashboard"></i> Dashboard
-                    </a>
+                    <a class="nav-link" href="dashboard.html"><i class="fa fa-dashboard"></i> Dashboard</a>
                 </li>
-
-                <script>
-                    document.getElementById('dashboard-button').addEventListener('click', function () {
-                        window.location.href = 'https://nssvec1.vercel.app/';
-                    });
-                </script>
             </ul>
         </div>
     </nav>
@@ -99,7 +94,7 @@
         <div class="team-container">
             <div class="team-card">
                 <div class="team-content">
-                    <div class="imgBx"><img src="./img/KarthikSir.jpg" /></div>
+                    <div class="imgBx"><img src="./assets/img/KarthikSir.jpg" /></div>
                     <div class="contentBx">
                         <h3>Dr. R. Karthik <br /><span>NSS, Program Officier</span></h3>
                     </div>
@@ -113,7 +108,7 @@
                 <div class="team-container">
                     <div class="team-card">
                         <div class="team-content">
-                            <div class="imgBx"><img src="img/kaviya.jpg" /></div>
+                            <div class="imgBx"><img src="assets/img/kaviya.jpg" /></div>
                             <div class="contentBx">
                                 <h3>
                                     KAVIYA SHREE <br /><span>GCO & MECH&AUTO Department Coordinator</span>
@@ -132,7 +127,7 @@
                     </div>
                     <div class="team-card">
                         <div class="team-content">
-                            <div class="imgBx"><img src="img/lalith.jpg" /></div>
+                            <div class="imgBx"><img src="assets/img/lalith.jpg" /></div>
                             <div class="contentBx">
                                 <h3>LALITH KANNAN <br /><span>VCO & CSE Department Coordinator</span></h3>
                             </div>
@@ -150,7 +145,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/vinoth.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/vinoth.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 VINOTH KUMAR <br /><span>ECE Department Coordinator</span>
@@ -169,7 +164,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/daya.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/daya.jpg" /></div>
                         <div class="contentBx">
                             <h3>DAYANITHA<br /><span>IT Department Coordinator</span></h3>
                         </div>
@@ -186,7 +181,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/sanjai.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/sanjai.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SANJAY KUMAR<br /><span>Civil, Cyber, EIE Department Coordinator</span>
@@ -205,7 +200,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/subashini.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/subashini.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SUBASHINI<br /><span>EEE Department Coordinator</span>
@@ -224,7 +219,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/rahul.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/rahul.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 RAHUL KUMARAN<br /><span>AI&DS Department Coordinator</span>
@@ -243,7 +238,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/shravanth.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/shravanth.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SHRAVANTH KUMAR<br /><span>Posters Team Head</span>
@@ -262,7 +257,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/swetha.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/swetha.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SWEDHA<br /><span>Newsletter Team Head</span>
@@ -281,7 +276,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/mukeshnss.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/mukeshnss.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 MUKESH<br /><span>Technical Team Head</span>
@@ -300,7 +295,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="img/mano.jpg" /></div>
+                        <div class="imgBx"><img src="assets/img/mano.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 Manova Daniel <br /><span>Website & Camera Handling Team Head</span>
@@ -331,7 +326,7 @@
                 <div class="team-container">
                     <div class="team-card">
                         <div class="team-content">
-                            <div class="imgBx"><img src="./img/Rohit.jpg" /></div>
+                            <div class="imgBx"><img src="./assets/img/Rohit.jpg" /></div>
                             <div class="contentBx">
                                 <h3>
                                     ROHITH PRABAKARAN<br /><span>GCO & EEE Department Coordinator</span>
@@ -351,7 +346,7 @@
                     </div>
                     <div class="team-card">
                         <div class="team-content">
-                            <div class="imgBx"><img src="./img/Aparna.jpg" /></div>
+                            <div class="imgBx"><img src="./assets/img/Aparna.jpg" /></div>
                             <div class="contentBx">
                                 <h3>APARNA KUMARESAN<br /><span>VCO & ECE Department Coordinator</span></h3>
                             </div>
@@ -370,7 +365,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Divya.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Divya.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 DIVYA M<br /><span>CSE Department Coordinator</span>
@@ -389,7 +384,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Laisa.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Laisa.jpg" /></div>
                         <div class="contentBx">
                             <h3>LAISA SHYAMKUMAR<br /><span>AI&DS Department Coordinator</span></h3>
                         </div>
@@ -407,7 +402,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Akashyaa.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Akashyaa.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 AKSHAYAA DARSHINI D<br /><span>Civil, Cyber, EIE Department Coordinator</span>
@@ -426,7 +421,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Shreenidhi.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Shreenidhi.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SHREENIDHI VP<br /><span>MECH & AUTO Department Coordinator</span>
@@ -445,7 +440,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Suriya.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Suriya.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SURYA V<br /><span>IT Department Coordinator</span>
@@ -465,7 +460,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Glory.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Glory.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 GLORY THOMAS JULIA G<br /><span>Posters Team Head</span>
@@ -485,7 +480,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Dinesh.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Dinesh.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 DINESH PRASAD E<br /><span>Newsletter Team Head</span>
@@ -505,7 +500,7 @@
                 </div>
                 <div class="team-card">
                     <div class="team-content">
-                        <div class="imgBx"><img src="./img/Saravana.jpg" /></div>
+                        <div class="imgBx"><img src="./assets/img/Saravana.jpg" /></div>
                         <div class="contentBx">
                             <h3>
                                 SARAVANAKUMAR R<br /><span>Technical Team Head</span>
