refactor: Update page titles and asset paths in HTML files

--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="css/podcast.css">
     <link rel="stylesheet" href="css/gallery.css">
 
-    <title>NSSVEC-Podcast</title>
+    <title>NSSVEC-Gallery</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GKETKK6ZGK"></script>
