--- a/team.html
+++ b/team.html
@@ -32,7 +32,7 @@
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <link rel="preload" href="css/teams.css" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'">
 
-    <title>NSS-VEC</title>
+    <title>NSSVEC-Team</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GKETKK6ZGK"></script>
