--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="./img/Nss.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/img/Nss.png" type="image/x-icon" />
 
     <!-- icons -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -25,14 +25,14 @@
 
     <link rel="preload" href="css/flippingCard.css" as="style" media="all"
         onload="this.onload=null;this.rel='stylesheet'" />
-    <link rel="preload" href="css/main.css" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'" />
     <link rel="preload" href="css/contact.css" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'" />
     <link rel="preload" href="css/lightbox.min.css" as="style" media="all"
         onload="this.onload=null;this.rel='stylesheet'" />
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <link rel="preload" href="css/teams.css" as="style" media="all" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="stylesheet" href="css/podcast.css">
 
-    <title>NSS-VEC</title>
+    <title>NSSVEC-Dashboard</title>
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-GKETKK6ZGK"></script>
@@ -46,49 +46,87 @@
 
 </head>
 
+<!-- navbar start -->
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(202, 192, 192);">
+    <img class="navbar-brand" src="./assets/img/Nss.png" alt="nss-logo-png" width="55.4rem" height="60.4rem" />
+    <a id="mmmut-tag" href=index.html>National Service Scheme<br>Velammal Engineering College</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Home
+                    <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="team.html"><i class="fa fa-users"></i> Team</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="gallery.html"><i class="fa fa-image"></i> Gallery</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="events.html"><i class="fa fa-calendar"></i> Events</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="podcast.html"><i class="fa fa-microphone"></i> Podcast</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="dashboard.html"><i class="fa fa-dashboard"></i> Dashboard</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!-- navbar end -->
+
+</head>
+
 <body>
 
-    <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgb(202, 192, 192);">
-        <img class="navbar-brand" src="./assets/img/Nss.png" alt="nss-logo-png" width="55.4rem" height="60.4rem" />
-        <a id="mmmut-tag" href=index.html>National Service Scheme<br>Velammal Engineering College</a>
+    <div class="container">
+        <section class="intro">
+            <h2>NSS Dashboard</h2>
+            <p>Will be update Soon</p>
+        </section>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html"><i class="fa fa-home"></i> Home
-                        <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="team.html"><i class="fa fa-users"></i> Team</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="gallery.html"><i class="fa fa-image"></i> Gallery</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="events.html"><i class="fa fa-calendar"></i> Events</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="podcast.html"><i class="fa fa-microphone"></i> Podcast</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="dashboard.html"><i class="fa fa-dashboard"></i> Dashboard</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!-- navbar end -->
+    </div>
 
+    <!-- section 3 ends -->
+    <!-- boostrap js start -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+    <script src="scripts.js"></script>
+    <!-- bootstrap js ends -->
 
+    <!-- btn-to-top script start -->
+    <script>
+        const btn = document.querySelector('.btn-to-top');
+        btn.addEventListener("click", function () {
+            window.scrollTo({
+                top: 0,
+                left: 0,
+                behavior: "smooth"
+            });
+        })
+    </script>
+    <!-- btn-to-top script ends-->
 
-
-
-
-
+    <!-- preloader script starts-->
+    <script>
+        function close_loader() {
+            document.getElementById('pre-loader').style.display = 'none';
+        }
+    </script>
+    <!-- preloader script end-->
 
     <footer id="footer">
         <hr>
@@ -98,5 +136,4 @@
         </div>
     </footer>
 </body>
-
 </html>
