refactor: Remove dashboard.html and update navigation links across multiple pages

--- a/events.html
+++ b/events.html
@@ -73,9 +73,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="podcast.html"><i class="fa fa-microphone"></i> Podcast</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="dashboard.html"><i class="fa fa-dashboard"></i> Dashboard</a>
-            </li>
         </ul>
     </div>
 </nav>
@@ -673,7 +670,7 @@
     <div id="newsletter23" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal('newsletter23')">&times;</span>
-            <iframe src="assets/newsletters/Eco_3.0" height="400px" style="justify-items: center; align-items: center;"></iframe>
+            <iframe src="assets/newsletters/Eco_3.0.pdf" height="400px" style="justify-items: center; align-items: center;"></iframe>
         </div>
     </div>
 
