--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
             <li class="nav-item">
                 <a class="nav-link" href="podcast.html"><i class="fa fa-microphone"></i> Podcast</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="dashboard.html"><i class="fa fa-dashboard"></i> Dashboard</a>
-            </li>
         </ul>
     </div>
 </nav>
@@ -233,15 +230,15 @@
                 <br>
 
                 <div class="button" id="button">
-                    <i class="fa fa-dashboard"></i> Dashboard
+                    <i class="fa fa-sign-out"></i> NSS GOVT PORTAL
                 </div>
                 <script>
                     document.getElementById('button').addEventListener('click', function () {
-                        window.location.href = 'https://nssvec1.vercel.app/';
+                        window.location.href = 'https://nss.gov.in/';
                     });
                 </script>
 
-                <p><strong>The Dashboard feature is an exclusive feature only for Present, Ex - NSS Volunteers and Teachers of Velammal Engineering College</strong></p>
+                <p><strong>For more information, visit the official website of NSS, Govt of India.</strong></p>
 
             </div>
             <div class="box" id="box2">
